# mictlan

./: .gitignore  LICENSE  Makefile  README.md  install.sh  pyproject.toml
adapters/claude_code/: README.md
adapters/hermes/: README.md  dream_cycle.py
adapters/openclaw/: README.md
docs/adr/: 0001-centralize-dreaming-mictlan.md
mictlan/: __init__.py  analyzer.py  ledger.py  lint.py  orchestrate.py  paths.py  pending.py  policy.py  proposals.py  reindex.py  schema.py  triage.py  validate.py
mictlan/stagers/: __init__.py  archive_subagent_jsonl.py  claude_code.py  claude_web.py  cursor.py  fetch_claude_web.py
skills/dream/: SKILL.md
tests/: test_proposals.py  test_reindex_vectors.py
