[project]
name = "mictlan"
version = "0.1.0"
description = "Centralized dreaming (memory consolidation) engine for the agent ecosystem"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
web = ["playwright>=1.44"]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mictlan"]

[tool.pytest.ini_options]
testpaths = ["tests"]
